added global keybinds for toggling keyboard mode and toggling fullscreen apps

--- a/exwm/README.org
+++ b/exwm/README.org
@@ -124,6 +124,12 @@ cover the desktop entry I use so I can select exwm from my login screen
               ([?\s-p] . windmove-up)
               ([?\s-n] . windmove-down)
 
+              ;; Switch between line and char mode
+              ([?\s-i] . exwm-input-toggle-keyboard)
+
+              ;; Toggle Fullscreen
+              ([?\s-F] . exwm-layout-toggle-fullscreen)
+
               ;; Switch workspaces
               ([?\s-w] . exwm-workspace-switch)
               ([s-escape] . (lambda () (interactive) (exwm-workspace-switch-create 0)))
