--- a/README.org
+++ b/README.org
@@ -257,9 +257,22 @@ appropriate elisp files. I will cover how this is done further in this document.
   #+end_src
 
 * Org Configuration
+  Org or ~org-mode~ is probably the greatest aspect of emacs and I highly
+  recommended looking at the documentation for a deeper understanding of what it
+  can do: [[https://orgmode.org/][Org mode]]. Here are the very basics of my ~org-mode~ configuration:
   #+begin_src emacs-lisp
+    ;; Make org mode auto new line after the 80th character
     (add-hook 'org-mode-hook '(lambda () (setq fill-column 80)))
     (add-hook 'org-mode-hook 'turn-on-auto-fill)
+
+    ;; Updated last_modified heading if present after file save
+    (add-hook 'org-mode-hook (lambda ()
+                               (setq-local time-stamp-active t
+                                           time-stamp-line-limit 8
+                                           time-stamp-start "^#\\+last_modified: [ \t]*"
+                                           time-stamp-end "$"
+                                           time-stamp-format "\[%Y-%m-%d %a %H:%M:%S\]")
+                               (add-hook 'before-save-hook 'time-stamp nil 'local)))
 
   #+end_src
 
@@ -281,6 +294,7 @@ appropriate elisp files. I will cover how this is done further in this document.
          (let ((org-confirm-babel-evaluate nil))
            (org-babel-tangle))))
 
+     ;; Run org-babel-tangle-config function after save of org file
      (add-hook 'org-mode-hook
                (lambda ()
                  (add-hook 'after-save-hook #'heph/org-babel-tangle-config)))
@@ -302,6 +316,39 @@ appropriate elisp files. I will cover how this is done further in this document.
      (add-to-list 'org-structure-template-alist '("py" . "src python"))
 
   #+end_src
+
+** Org Roam Configuration
+   The ~org-roam~ package is a very interesting package and I recommened reading
+   the documentation to truely understand its features: [[https://www.orgroam.com/][Org Roam]]. To summarize
+   the ~org-roam~ package lets you implement the [[https://en.wikipedia.org/wiki/Zettelkasten][Zettelkasten]] method of writing
+   notes using emacs org mode. Essentially you can turn your org mode notes into
+   a "second brain" containing all of your combined knowledged with interlinking
+   between related topics in an easily searchable way. Here is my configuration
+   for the ~org-roam~ package:
+   #+begin_src emacs-lisp
+     (use-package org-roam
+       :ensure t
+       :init
+       ;; Disable v2 warning message
+       (setq org-roam-v2-ack t)
+       :custom
+       ;; My Roam Notes directory
+       (org-roam-directory "~/RoamNotes")
+       (org-roam-capture-templates
+        ;; My default org-roam template
+        '(("d" "default" plain
+           "\n%?"
+           :if-new (file+head
+                    "${slug}.org"
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n\n\n")
+           :unnarrowed t)))
+       :bind (("C-c n l" . org-roam-buffer-toggle)
+              ("C-c n f" . org-roam-node-find)
+              ("C-c n i" . org-roam-node-insert))
+       :config
+       (org-roam-setup))
+
+   #+end_src
 
 * Development Configurations
   This section will cover various packages and configurations I have setup for
