--- a/README.org
+++ b/README.org
@@ -309,6 +309,7 @@ appropriate elisp files. I will cover how this is done further in this document.
      (require 'org-tempo)
 
      (add-to-list 'org-structure-template-alist '("ba" . "src bash"))
+     (add-to-list 'org-structure-template-alist '("C" . "src c"))
      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
      (add-to-list 'org-structure-template-alist '("ja" . "src java"))
      (add-to-list 'org-structure-template-alist '("js" . "src javascript"))
@@ -345,7 +346,7 @@ appropriate elisp files. I will cover how this is done further in this document.
           ("l" "Programming Language" plain
            (file "~/RoamNotes/RoamTemplates/ProgrammingLanguageTemplate.org")
            :if-new (file+head
-                    "Projects/${slug}.org"
+                    "ProgrammingLanguages/${slug}.org"
                     "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: ProgrammingLanguage")
            :unnarrowed t)
           ("p" "Project" plain
