more updates to org templates and org-roam config

--- a/README.org
+++ b/README.org
@@ -309,6 +309,8 @@ appropriate elisp files. I will cover how this is done further in this document.
      (require 'org-tempo)
 
      (add-to-list 'org-structure-template-alist '("ba" . "src bash"))
+     ;; Remove "C" structure template to map "C" to "src C"
+     (delete '("C" . "comment") org-structure-template-alist)
      (add-to-list 'org-structure-template-alist '("C" . "src c"))
      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
      (add-to-list 'org-structure-template-alist '("ja" . "src java"))
@@ -359,7 +361,7 @@ appropriate elisp files. I will cover how this is done further in this document.
            (file "~/RoamNotes/RoamTemplates/ProgrammingLanguageTemplate.org")
            :if-new (file+head
                     "ProgrammingLanguages/Basics/${slug}.org"
-                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: ProgrammingLanguage")
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: ProgrammingLanguage Basics")
            :unnarrowed t)
           ("p" "Project" plain
            (file "~/RoamNotes/RoamTemplates/ProjectTemplate.org")
