--- a/README.org
+++ b/README.org
@@ -336,7 +336,7 @@ appropriate elisp files. I will cover how this is done further in this document.
        (setq org-roam-v2-ack t)
        :custom
        ;; My Roam Notes directory
-       (org-roam-directory "~/RoamNotes")
+       (org-roam-directory "~/Notes")
        (org-roam-capture-templates
         ;; My default org-roam template
         '(("d" "Default" plain
