require fringe library

--- a/README.org
+++ b/README.org
@@ -29,6 +29,8 @@ appropriate elisp files. I will cover how this is done further in this document.
          (scroll-bar-mode -1))
      (tool-bar-mode -1)
      (tooltip-mode -1)
+
+     (require 'fringe)
      (set-fringe-mode 10)
 
      (menu-bar-mode -1)
