added roam template for reference notes

--- a/README.org
+++ b/README.org
@@ -403,6 +403,12 @@ appropriate elisp files. I will cover how this is done further in this document.
                     "Projects/${slug}.org"
                     "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: Project")
            :unnarrowed t)
+          ("r" "Reference" plain
+           (file "~/Notes/RoamTemplates/DefaultTemplate.org")
+           :if-new (file+head
+                    "Content/${slug}.org"
+                    "#+title: ${title}\n#+created: %U\n#+last_modified: %U\n#+filetags: Reference")
+           :unnarrowed t)
           ("t" "Tool" plain
            (file "~/Notes/RoamTemplates/DefaultTemplate.org")
            :if-new (file+head
