--- a/README.org
+++ b/README.org
@@ -423,6 +423,10 @@ appropriate elisp files. I will cover how this is done further in this document.
        :config
        (org-roam-setup))
 
+     (setq org-roam-node-display-template
+           (concat "${title:*} "
+                   (propertize "${tags:20}" 'face 'org-tag)))
+
    #+end_src
 
 *** Org Roam UI
@@ -435,6 +439,15 @@ appropriate elisp files. I will cover how this is done further in this document.
       (use-package org-roam-ui)
 
     #+end_src
+
+* Markdown Configurations
+  Here are some of the tweaks I have made to markdown-mode:
+  #+begin_src emacs-lisp
+    (add-hook 'markdown-mode-hook '(lambda () (setq fill-column 80)))
+    (add-hook 'markdown-mode-hook 'turn-on-auto-fill)
+    (add-hook 'markdown-mode-hook 'flyspell-mode)
+
+  #+end_src
 
 * Development Configurations
   This section will cover various packages and configurations I have setup for
@@ -552,10 +565,14 @@ appropriate elisp files. I will cover how this is done further in this document.
 * Misc Configuration
   This is just some minor tweaks that I have as well in my emacs config.
   #+begin_src emacs-lisp
-    (add-hook 'markdown-mode-hook '(lambda () (setq fill-column 80)))
-    (add-hook 'markdown-mode-hook 'turn-on-auto-fill)
-
+    ;; auto-package-update lets you update your installed packages
     (use-package auto-package-update)
+
+    ;; On MacOS make GUI emacs load user environment
+    (use-package exec-path-from-shell)
+
+    (when (memq window-system '(mac ns x))
+      (exec-path-from-shell-initialize))
 
   #+end_src
 
