added jsonnet-mode and template-alist for json code block

--- a/README.org
+++ b/README.org
@@ -342,6 +342,7 @@ appropriate elisp files. I will cover how this is done further in this document.
      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
      (add-to-list 'org-structure-template-alist '("ja" . "src java"))
      (add-to-list 'org-structure-template-alist '("js" . "src javascript"))
+     (add-to-list 'org-structure-template-alist '("json" . "src json"))
      (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
      (add-to-list 'org-structure-template-alist '("py" . "src python"))
      (add-to-list 'org-structure-template-alist '("ts" . "src typescript"))
@@ -551,6 +552,8 @@ appropriate elisp files. I will cover how this is done further in this document.
                  (setq py-indent-offset 2)))
 
      (use-package docker-compose-mode)
+
+     (use-package jsonnet-mode)
 
      (use-package terraform-mode)
 
