--- a/README.org
+++ b/README.org
@@ -90,7 +90,7 @@ appropriate elisp files. I will cover how this is done further in this document.
            (window-configuration-to-register '_)
            (delete-other-windows))))
 
-     (global-set-key (kbd "C-c 1") 'toggle-maximize-buffer)
+     (global-set-key (kbd "C-x !") 'toggle-maximize-buffer)
 
    #+end_src
 
