--- a/README.org
+++ b/README.org
@@ -470,6 +470,45 @@ appropriate elisp files. I will cover how this is done further in this document.
   This section will cover various packages and configurations I have setup for
   development work.
 
+** Language Packages
+   This section will cover the different mode packages I use for the various
+   development languages I work with:
+   #+begin_src emacs-lisp
+     (add-hook 'css-mode-hook
+               (lambda()
+                 (setq tab-width 2)
+                 (setq css-indent-offset 2)))
+     (add-hook 'css-mode-hook 'lsp)
+
+     (add-hook 'html-mode-hook 'lsp)
+
+     (add-hook 'js-mode-hook
+               (lambda()
+                 (setq tab-width 2)
+                 (setq js-indent-level 2)))
+     (add-hook 'js-mode-hook 'lsp)
+
+     (add-hook 'python-mode-hook
+               (lambda()
+                 (setq tab-width 2)
+                 (setq py-indent-offset 2)))
+
+     (use-package docker-compose-mode)
+
+     (use-package terraform-mode)
+
+     (use-package typescript-mode
+       :mode "\\.ts\\'"
+       :hook (typescript-mode . lsp-deferred)
+       :config
+       (setq typescript-indent-level 2))
+
+     (use-package yasnippet)
+
+     (use-package jsonnet-mode)
+
+   #+end_src
+
 ** Language Servers
    This section will cover the ~lsp-mode~ package and the various configurations
    I have setup to build my own IDE for various languages. The ~lsp-mode~
@@ -578,43 +617,6 @@ appropriate elisp files. I will cover how this is done further in this document.
       ;;; jsonnet-language-server.el ends here
 
     #+end_src
-
-** Language Packages
-   This section will cover the different mode packages I use for the various
-   development languages I work with:
-   #+begin_src emacs-lisp
-     (add-hook 'css-mode-hook
-               (lambda()
-                 (setq tab-width 2)
-                 (setq css-indent-offset 2)))
-     (add-hook 'css-mode-hook 'lsp)
-
-     (add-hook 'html-mode-hook 'lsp)
-
-     (add-hook 'js-mode-hook
-               (lambda()
-                 (setq tab-width 2)
-                 (setq js-indent-level 2)))
-     (add-hook 'js-mode-hook 'lsp)
-
-     (add-hook 'python-mode-hook
-               (lambda()
-                 (setq tab-width 2)
-                 (setq py-indent-offset 2)))
-
-     (use-package docker-compose-mode)
-
-     (use-package terraform-mode)
-
-     (use-package typescript-mode
-       :mode "\\.ts\\'"
-       :hook (typescript-mode . lsp-deferred)
-       :config
-       (setq typescript-indent-level 2))
-
-     (use-package yasnippet)
-
-   #+end_src
 
 ** Magit Configuration
    The ~magit~ packages allows you to interact with git repositories and run all
