--- a/README.org
+++ b/README.org
@@ -486,6 +486,8 @@ appropriate elisp files. I will cover how this is done further in this document.
 
      (use-package mermaid-mode)
 
+     (use-package lua-mode)
+
    #+end_src
 
 ** Language Servers
