--- a/README.org
+++ b/README.org
@@ -265,7 +265,7 @@ appropriate elisp files. I will cover how this is done further in this document.
                                            time-stamp-line-limit 8
                                            time-stamp-start "^#\\+last_modified: [ \t]*"
                                            time-stamp-end "$"
-                                           time-stamp-format "\[%Y-%m-%d %a %H:%M:%S\]")
+                                           time-stamp-format "\[%Y-%m-%d %a %H:%M\]")
                                (add-hook 'before-save-hook 'time-stamp nil 'local)))
 
   #+end_src
