--- a/README.org
+++ b/README.org
@@ -332,6 +332,7 @@ appropriate elisp files. I will cover how this is done further in this document.
      (delete '("C" . "comment") org-structure-template-alist)
      (add-to-list 'org-structure-template-alist '("C" . "src c"))
      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+     (add-to-list 'org-structure-template-alist '("go" . "src go"))
      (add-to-list 'org-structure-template-alist '("ja" . "src java"))
      (add-to-list 'org-structure-template-alist '("js" . "src javascript"))
      (add-to-list 'org-structure-template-alist '("json" . "src json"))
@@ -487,6 +488,8 @@ appropriate elisp files. I will cover how this is done further in this document.
      (use-package mermaid-mode)
 
      (use-package lua-mode)
+
+     (use-package go-mode)
 
    #+end_src
 
