--- a/exwm/README.org
+++ b/exwm/README.org
@@ -39,7 +39,11 @@ cover the desktop entry I use so I can select exwm from my login screen
   to use. The first of these allows X applications to have their name placed
   in the buffer name when launched:
   #+begin_src emacs-lisp
-    (defun heph/exwm-update-class ()
+    ;; Enable window switching with mouse hover
+    (setq mouse-autoselect-window t)
+
+    ;; Function to set buffer name to appliction name
+    (defun exwm-update-class ()
       (exwm-workspace-rename-buffer exwm-class-name))
 
   #+end_src
@@ -48,7 +52,8 @@ cover the desktop entry I use so I can select exwm from my login screen
   background. This will be utilized in my initialization function to boot
   application that I want to autostart when I login to exwm:
   #+begin_src emacs-lisp
-    (defun heph/run-in-background (command)
+    ;; Function to launch application in the background
+    (defun run-in-background (command)
       (let ((command-parts (split-string command "[ ]+")))
         (apply #'call-process `(,(car command-parts) nil 0 nil ,@(cdr command-parts)))))
 
@@ -57,15 +62,10 @@ cover the desktop entry I use so I can select exwm from my login screen
   This next function is my initialization function and will contain information
   about configurations and functions I want to kick off before exwm boots:
   #+begin_src emacs-lisp
-    (defun heph/exwm-init-hook ()
+    ;; Initialization
+    (defun exwm-init-hook ()
       ;; Make workspace 1 be the one where we land at startup
       (exwm-workspace-switch-create 1)
-
-      ;; Open eshell by default
-      ;;(eshell)
-
-      ;; Show battery status in the mode line
-      ;;(display-battery-mode 1)
 
       ;; Show the time and date in modeline
       (setq display-time-day-and-date t)
@@ -73,9 +73,9 @@ cover the desktop entry I use so I can select exwm from my login screen
       ;; Also take a look at display-time-format and format-time-string
 
       ;; Launch apps that will run in the background
-      (heph/run-in-background "nitrogen --restore")
-      (heph/run-in-background "picom")
-      (heph/run-in-background "xbindkeys")
+      (run-in-background "nitrogen --restore")
+      (run-in-background "picom")
+      (run-in-background "xbindkeys")
       )
 
   #+end_src
@@ -90,10 +90,10 @@ cover the desktop entry I use so I can select exwm from my login screen
       (setq exwm-workspace-number 5)
 
       ;; When window "class" updates, use it to set the buffer name
-      (add-hook 'exwm-update-class-hook #'heph/exwm-update-class)
+      (add-hook 'exwm-update-class-hook #'exwm-update-class)
 
       ;; When EXWM starts up, do some extra confifuration
-      (add-hook 'exwm-init-hook #'heph/exwm-init-hook)
+      (add-hook 'exwm-init-hook #'exwm-init-hook)
 
       ;; These keys should always pass through to Emacs
       (setq exwm-input-prefix-keys
